Backport r72961 fixing issue #6105: json.dumps not following OrderedDict iteration order.